# meshComms

./: .mailmap  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  Makefile  PROJECT  README.md  prplMesh.pc.in  prplMeshConfig.cmake.in  release_compile.sh  version.txt
include/: 1905_alme.h  1905_cmdus.h  1905_tlvs.h  bbf_tlvs.h  datamodel.h  dlist.h  hlist.h  lldp_payload.h  lldp_tlvs.h  ptrarray.h  tlv.h  utils.h
output/tmp/: .place_holder
scripts/: README.md
scripts/linux/arm_wrt1900acx/: start_linksys.sh  topology_change.sh  wps
src/: 1905_alme.c  1905_cmdus.c  CMakeLists.txt  Doxyfile  al_datamodel.c  al_datamodel.h  al_entity.c  al_extension.c  al_extension_register.c  al_recv.c  al_recv.h  al_send.c  al_send.h  al_utils.c  al_utils.h  al_wsc.c  al_wsc.h  bbf_recv.c  bbf_recv.h  bbf_tlvs.c  datamodel.c  hlist.c  lldp_tlvs.c  media_specific_blobs.c  platform_crypto.h  platform_interfaces.h  platform_os.h  tlv.c  utils.c
src/al/: Makefile
src/al/ale_tests/: Makefile  aletest.c  aletest.h  aletest0.sim  aletest1.sim  aletest2.sim  aletest3.sim  ap_onboarding_controller.c  start_interfaces  topology_discovery.c
src/al/internal_interfaces/: al.h  datamodel.h  ieee80211.h  interface.h  netlink_funcs.h  platform_alme_server.h  platform_crypto.h  platform_interfaces.h  platform_os.h
src/al/src_independent/: al_datamodel.c  al_datamodel.h  al_entity.c  al_extension.c  al_extension.h  al_extension_register.c  al_recv.c  al_recv.h  al_send.c  al_send.h  al_utils.c  al_utils.h  al_wsc.c  al_wsc.h  datamodel.c
src/al/src_independent/extensions/bbf/: bbf_recv.c  bbf_recv.h  bbf_send.c  bbf_send.h
src/al/src_linux/: al_entity_main.c  netlink_collect.c  netlink_utils.c  platform_alme_server.c  platform_alme_server_priv.h  platform_crypto.c  platform_interfaces.c  platform_interfaces_ghnspirit.c  platform_interfaces_ghnspirit_priv.h  platform_interfaces_priv.h  platform_interfaces_simulated.c  platform_interfaces_simulated_priv.h  platform_interfaces_wrt1900acx.c  platform_interfaces_wrt1900acx_priv.h  platform_os.c  platform_os_priv.h
src/common/: Makefile
src/common/interfaces/: dlist.h  hlist.h  packet_tools.h  platform.h  platform_linux.h  ptrarray.h  utils.h
src/common/src_independent/: hlist.c  mac_address.c  utils.c
src/common/src_linux/: platform.c
src/common/unit_tests/: dlist_test.c  ptrarray_test.c
src/factory/: Makefile
src/factory/interfaces/: 1905_alme.h  1905_cmdus.h  1905_l2.h  1905_tlvs.h  lldp_payload.h  lldp_tlvs.h  media_specific_blobs.h  tlv.h
src/factory/interfaces/extensions/bbf/: bbf_tlvs.h
src/factory/src_independent/: 1905_alme.c  1905_cmdus.c  1905_tlvs.c  lldp_payload.c  lldp_tlvs.c  media_specific_blobs.c  tlv.c  tlv_template.h  tlv_template_inner.h
src/factory/src_independent/extensions/bbf/: bbf_tlvs.c
src/factory/unit_tests/: 1905_alme_forging.c  1905_alme_parsing.c  1905_alme_test_vectors.c  1905_alme_test_vectors.h  1905_cmdu_forging.c  1905_cmdu_parsing.c  1905_cmdu_test_vectors.c  1905_cmdu_test_vectors.h  1905_tlv_forging.c  1905_tlv_parsing.c  1905_tlv_test_vectors.c  1905_tlv_test_vectors.h  Makefile  hlist_test.c  lldp_payload_forging.c  lldp_payload_parsing.c  lldp_payload_test_vectors.c  lldp_payload_test_vectors.h  lldp_tlv_forging.c  lldp_tlv_parsing.c  lldp_tlv_test_vectors.c  lldp_tlv_test_vectors.h
src/factory/unit_tests/extensions/bbf/: bbf_tlv_forging.c  bbf_tlv_parsing.c  bbf_tlv_test_vectors.c  bbf_tlv_test_vectors.h
src/hle/: Makefile
src/hle/src_linux/: hle_entity_main.c
src/linux/: netlink_collect.c  netlink_funcs.h  netlink_socks.c  netlink_utils.c  nl80211.h  platform.c  platform_alme_server.c  platform_alme_server_priv.h  platform_crypto.c  platform_interfaces.c  platform_interfaces_ghnspirit.c  platform_interfaces_ghnspirit_priv.h  platform_interfaces_openwrt.c  platform_interfaces_openwrt_priv.h  platform_interfaces_simulated.c  platform_interfaces_simulated_priv.h  platform_interfaces_wrt1900acx.c  platform_interfaces_wrt1900acx_priv.h  platform_os.c  platform_os_priv.h  platform_uci.c  platform_uci.h
src/linux/al_entity/: al_entity_main.c
src/linux/hl_entity/: hl_entity_main.c
tests/: 1905_alme_forging.c  1905_alme_test_vectors.h  1905_cmdu_test_vectors.h  1905_tlv_forging.c  CMakeLists.txt  aletest.c  aletest0.sim  ap_onboarding_controller.c  bbf_tlv_test_vectors.c  bbf_tlv_test_vectors.h  hlist_test.c  lldp_payload_forging.c  lldp_payload_test_vectors.h  lldp_tlv_test_vectors.c  lldp_tlv_test_vectors.h  start_interfaces  topology_discovery.c
